--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
       <p class="lead" style="display: none" id="congrats">
         Congratulations! Your letter is:
       </p>
-      <h1 id="letter">A</h1>
+      <h1 id="letter"></h1>
     </p>
 
     </div>
